[gd_scene load_steps=2 format=3 uid="uid://6ujmasyco4g4"]

[ext_resource type="Script" uid="uid://crmpj0f34jyrf" path="res://scripts/ui.gd" id="1_nt7q6"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_nt7q6")

[node name="StartGameLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 648.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Press SPACE to start"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1080.0
offset_top = 7.0
offset_right = 1144.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 951.0
offset_top = 16.0
offset_right = 1068.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
